--- a/GameMario/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/GameMario/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClCompile Include="FlowSwitchScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ItemFly.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Brick.h">
@@ -300,6 +303,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FlowSwitchScene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ItemFly.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
