--- a/GameMario/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/GameMario/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClCompile Include="ItemFly.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BulletFireMario.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Brick.h">
@@ -306,6 +309,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ItemFly.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BulletFireMario.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
